--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "16.9.9",
-    "@types/react-dom": "16.9.2",
+    "@types/react": "^16.11.0",
+    "@types/react-dom": "^16.9.11",
     "@types/react-redux": "7.1.5",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
@@ -58,6 +58,6 @@
     "not op_mini all"
   ],
   "resolutions": {
-    "@types/react": "^16.9.9"
+    "@types/react": "^16.11.0"
   }
 }
