--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-icons": "^4.2.0",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
@@ -18,8 +19,7 @@
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "svgo": "1.3.0",
-    "yarn-deduplicate": "^3.1.0"
+    "svgo": "1.3.0"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
